--- a/app/views/pages/main.html.erb
+++ b/app/views/pages/main.html.erb
@@ -6,9 +6,7 @@
 </div>
 
 
-
 <h2>Rails 3.2 stack</h2>
-
 
 <dl class="dl-horizontal">
 	<dt>JQuery</dt>
@@ -28,3 +26,13 @@
 	
 </dl>
 
+<h2>Video Test</h2>
+<link href="http://vjs.zencdn.net/c/video-js.css" rel="stylesheet">
+<script src="http://vjs.zencdn.net/c/video.js"></script>
+
+<video id="my_video_1" class="video-js vjs-default-skin" controls
+  preload="auto" width="640" height="264" poster="my_video_poster.png"
+  data-setup="{}">
+  <source src="my_video.mp4" type='video/mp4'>
+  <source src="my_video.webm" type='video/webm'>
+</video>
